groundStation/data/style.css
:root {
    --contrast: #051C5B;
    --main: #f4f4f4;
}

@font-face {
    font-family: cyberFreight;
    src: url(cyberfreight.otf);
}

* {
    font-family: Helvetica, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    background-color: var(--main);
    height: 100vh;
    width: 100vw;
}

header {
    height: 12.5vh;
    width: 100vw;
    padding: 40px;
    font-size: 2.5em;
    display: flex; 
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: var(--contrast);
    color: var(--main);
}

header h1 {
    font-family: cyberFreight;
    background-color: var(--contrast);
}

main {
    height: auto;
    width: 100vw;
    font-size: 1.5em;
    font-weight: bold;
}

.horizontal-container {
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
}

.horizontal-container.medium {
    height: 30vh;
}

.vertical-container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding: 20px;
}

#atmospheric, #status, #energy, #gps, #charts {
    margin: 5px;
    border-radius: 5%;
    border: 1px lightgray solid;
    box-shadow: 2px 2px 2px 2px lightgray;
}

.data {
    font-size: 0.8em;
    font-weight: normal;
}

.horizontal-container.small {
    width: 20vw;
}

#atmospheric {
    width: 30vw;
}

#status {
    width: 40vw;
    height: 100%;
    padding: 0px;
}

.horizontal-container.tiny {
    width: 15vw;
}

#energy {
    width: 30vw;
}

.horizontal-container.large {
    height: 50vh;
}

#gps {
    width: 60vw;
}

#maps {
    width: 100%;
    height: 45vh;
}

#map {
    width: calc(30vw - 40px);
    height: 100%;
}

#coordinates {
    width: 100%;
    height: 5vh;
}

#movement {
    width: calc(30vw - 40px);
    padding: 0px;
}


#movement .vertical-container .horizontal-container {
    padding: 0px;
}

h2 {
    font-size: 1.2em;
}

#charts {
    height: 100%;
    width: 40vw;
    padding: 0px;
}

#heightChart, #voltageChart {
    width: 40vw;
    height: 25vh;
}

footer {
    width: 100vw;
    height: 7.5vh;
    background-color: var(--contrast);
    display: flex;
    justify-content: center;
    align-items: center;
}

a {
    font-style: normal;
    color: var(--main);
    text-decoration: none;
}

